CSS_files/secrets.css
* {
    margin: 0;
}

:root {
    --mono-font: 'JetBrains Mono', 'Courier New', Courier, monospace
}

a {
    color: yellow
}

.important {
    color: #00ade1;
    font-weight: bold;
}

#item-10:hover {
    background-color: #fff;
}

.grid-item p, .grid-item, h1, #input {
    font-family: var(--mono-font);
    color: white
}

.terminal-focus {
    color: rgb(0, 173, 225);
    font-weight: bold
}

.terminal-info {
    color: #A0A0A0;
    font-style: oblique;
    font-size: max(.8vw, 10px)
}

.info {
    font-size: max(.8vw, 10px)
}

body {
    display: flex;
    justify-content: center;
    align-content: center;
    background-color: black;
    margin-top: 40px;
}

#source, .cursor {
    display: none !important;
}

#grid-1 {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    width: 60vw;
    height: 60vw;
    border: 1px solid white;
    grid-auto-rows: 1fr;
    line-height: 1.5;
}

#clicks-7 {
    text-align: center;
    font-size: max(3.7vw, 12px);
    margin-top: 25%;
}

.no-select {
    user-select: none;
    /* supported by Chrome and Opera */
    -webkit-user-select: none;
    /* Safari */
    -khtml-user-select: none;
    /* Konqueror HTML */
    -moz-user-select: none;
    /* Firefox */
    -ms-user-select: none;
    /* Internet Explorer/Edge */
}

.grid-item {
    font-size: max(1.25vw, 12px);
    padding: 10px 20px;
    border: 1px solid white;
    overflow: scroll;
}

section[class="no-border"]>.grid-item {
    border: 1px solid black;
}

/* Broken grid layout*/

/* grid-column = width, grid-row = height*/

#item-1 {
    grid-column: 1 / span 3
}

#item-2 {
    grid-column: 4 / span 2;
    grid-row: 1 / span 2;
    background: black;
    color: white;
    padding: 10px;
    overflow-y: scroll;
    font-size: max(.9vw, 12px);
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

#item-3 {
    grid-row: 2 / span 2;
    padding: 20px;
}

#item-4 {
    grid-column: 2 / span 2;
}

#item-5 {
    grid-row: 3 / span 3;
    overflow: hidden;
    position: relative;
}

#item-10 {
    transition: background-color 1s ease;
}

#item-11 {
    grid-column: 4 / span 2;
}

#loading-bar {
    background-color: white;
    transition: height 1s ease;
}

#item-2::-webkit-scrollbar {
    display: none
}

#line {
    width: 100%;
}

#item-8 {
    overflow-x: scroll;
    white-space: nowrap;
}

.path {
    width: 1px;
    color: #00dc80;
}

#input {
    border: none;
    background: black;
    outline: none;
    font-size: inherit;
    padding: 0;
}

.snowflake {
    position: absolute;
    bottom: initial;
    z-index: -1;
    transition: all ease-in;
}

